<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    tools:context="in.etaminepgg.sfa.Activities.DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorAccent"
            android:visibility="visible"/>

        <FrameLayout
            android:id="@+id/promoSchemes_FrameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/sixteen_dp">

            <ImageView
                android:id="@+id/promoSchemesBell_ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_bell"/>

            <TextView
                android:textStyle="bold"
                android:id="@+id/noOfPromoSchemes_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="10"
                android:textColor="@android:color/black"
                android:textSize="20sp"/>
        </FrameLayout>

        <ProgressBar
            android:id="@+id/retailerVisits_ProgressBar"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="300dp"
            android:layout_height="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/thirty_two_dp"
            android:indeterminate="false"
            android:max="15"
            android:progress="0"
            android:scaleY="4"/>

        <LinearLayout
            android:id="@+id/retailerVisits_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            android:background="@android:drawable/list_selector_background"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_made"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_small"/>

            <TextView
                android:id="@+id/noOfRetailerVisits_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retailer_visits_today"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_small"/>

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/sixteen_dp"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:layout_marginTop="@dimen/thirty_two_dp">

            <TextView
                android:textColor="@android:color/black"
                android:id="@+id/newProducts_TextView"
                android:layout_width="@dimen/quadrant_width"
                android:layout_height="@dimen/quadrant_height"
                android:layout_marginBottom="10dp"
                android:background="@color/colorAccent"
                android:padding="@dimen/four_dp"
                android:text="@string/label_new_products"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintBottom_toTopOf="@+id/regularlyOrderedProducts_TextView"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/promotionalProducts_TextView"/>

            <TextView
                android:textColor="@android:color/black"
                android:id="@+id/promotionalProducts_TextView"
                android:layout_width="@dimen/quadrant_width"
                android:layout_height="@dimen/quadrant_height"
                android:layout_marginBottom="10dp"
                android:background="@color/colorAccent"
                android:padding="@dimen/four_dp"
                android:text="@string/label_promotional_products"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintBottom_toTopOf="@+id/allProducts_TextView"
                app:layout_constraintLeft_toRightOf="@+id/newProducts_TextView"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:textColor="@android:color/black"
                android:id="@+id/regularlyOrderedProducts_TextView"
                android:layout_width="@dimen/quadrant_width"
                android:layout_height="@dimen/quadrant_height"
                android:background="@color/colorAccent"
                android:padding="@dimen/four_dp"
                android:text="@string/label_frequently_ordered_products"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/allProducts_TextView"
                app:layout_constraintTop_toBottomOf="@+id/newProducts_TextView"/>

            <TextView
                android:textColor="@android:color/black"
                android:id="@+id/allProducts_TextView"
                android:layout_width="@dimen/quadrant_width"
                android:layout_height="@dimen/quadrant_height"
                android:background="@color/colorAccent"
                android:padding="@dimen/four_dp"
                android:text="@string/label_all_products"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintLeft_toRightOf="@+id/regularlyOrderedProducts_TextView"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/promotionalProducts_TextView"/>
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/nav_drawer_menu"/>
</android.support.v4.widget.DrawerLayout>